# wgsrv

./: Cargo.toml  LICENSE  wgsrv.service
scripts/: register-client.sh
src/: helpers.rs  main.rs  networks.rs  peers.rs  settings.rs
