[package]
name = "wgsrv"
authors = ["Sven Willner <sven.willner@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0"
ipnetwork = "0"
itertools = "0"
log = "0"
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wireguard-control = "1"
